<resources>
    <string name="app_name">Clean Notes</string>
    <string name="note">Note</string>
    <string name="no_notes">You have not created any notes yet</string>
    <string name="next">Continue</string>
    <string name="settings">Settings</string>
    <string name="share_note">Share note</string>
    <string name="save">Save</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="delete_note">Delete note</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
</resources>