<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="args"
            type="com.meazza.cleannotes.ui.upsert_note.UpsertNoteFragmentArgs" />

        <variable
            name="viewModel"
            type="com.meazza.cleannotes.ui.upsert_note.UpsertNoteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_upsert_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.upsert_note.UpsertNoteFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:setNullableText="@{args.note.title}"
            android:text="@={viewModel.noteTitle}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            android:setNullableText="@{args.note.content}"
            android:text="@={viewModel.noteContent}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_title"
            app:layout_constraintStart_toStartOf="@+id/et_title"
            app:layout_constraintTop_toBottomOf="@+id/et_title" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/save"
            android:focusable="true"
            android:onClick="@{() -> viewModel.saveNote()}"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>